# fractions

./: README.md
app/android/: .gitignore  settings.gradle
app/android/app/: build.gradle
app/android/app/src/androidTest/java/com/rbodai/fractions/: ExampleInstrumentedTest.kt
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/java/com/rbodai/fractions/: MainActivity.kt
app/android/app/src/main/res/layout/: activity_main.xml
app/android/app/src/main/res/values/: strings.xml  themes.xml
app/android/app/src/main/res/values-night/: themes.xml
app/android/app/src/test/java/com/rbodai/fractions/: ExampleUnitTest.kt
app/android/gradle/wrapper/: gradle-wrapper.properties
app/windows/: build.bat  main.cpp
docs/: flowchart.drawio.xml  flowchart.html
libFractional/: CMakeLists.txt  MainActivity_JNI.cpp  build_android_32bit.bat  build_android_64bit.bat  build_windows_debug.bat  build_windows_release.bat  fraction.cpp  fractional_util.cpp
libFractional/include/: fraction.h  fractional_util.h
libFractional/tests/: CMakeLists.txt  fractional_tests.cpp
